@@ -341,6 +341,7 @@ Kaveh R. Ghazi                      ghazi@caip.rutgers.edu
 Keith M. Briggs                     keith.briggs@bt.com
 Keith Owens                         kaos@audio.apana.org.au
 Keith Thompson                      kst@cts.com
+Ken Irving                          ken.irving@alaska.edu
 Ken Pizzini                         kenp@halcyon.com
 Kevin Mudrick                       kmudrick@healthmarketscience.com
 Kirk Kelsey                         kirk.kelsey@0x4b.net
